--- a/index.html
+++ b/index.html
@@ -44,12 +44,26 @@
         </div>
     </nav>
 
+    <!-- 5 bubbles -->
+    <div class="floating bubble-1" style="border: 1px solid rgb(1, 21, 246); border-radius: 100%; height: 50px; width: 50px;background: transparent; padding: 10px; left: 120px; top: -150px;">
+    </div>
+    <div class="floating bubble-2" style="border: 1px solid rgb(1, 21, 246); border-radius: 100%; height: 50px; width: 50px;background: transparent; padding: 5px; left: 250px; top: -150px;">
+    </div>
+    <div class="floating bubble-3" style="border: 1px solid rgb(1, 21, 246); border-radius: 100%; height: 50px; width: 50px;background: transparent; padding: 5px; left: 500px; top: -150px;">
+    </div>
+    <div class="floating bubble-4" style="border: 1px solid rgb(1, 21, 246); border-radius: 100%; height: 50px; width: 50px;background: transparent; padding: 30px; left: 700px; top: -150px;">
+    </div>
+    <div class="floating bubble-5" style="border: 1px solid rgb(1, 21, 246); border-radius: 100%; height: 50px; width: 50px;background: transparent; padding: 20px; left: 1000px; top: -150px;">
+    </div>
+    <div class="floating bubble-6" style="border: 1px solid rgb(1, 21, 246); border-radius: 100%; height: 50px; width: 50px;background: transparent; padding: 20px; left: 1200px; top: -150px;">
+    </div>
+
     <section class="lemon-lavender">
         <h1>LEMON</h1>
         <h1> LAVENDER</h1>
-        <img src="images/LEMON.png" alt="lemon-lavender-image" width="200px" height="350px">
-        <p class="description">YOU LEARN TO LOVE MY UNEXPECTEDNESS: AN AROMATIC CONFIDENCE AND ACIDIC WIT WRAPPED IN AN ORDINARY EXTERIOR.</p>
-        <p class="ingredient">
+        <img src="images/LEMON.png" alt="lemon-lavender-image" width="200px" height="350px" class="lemon-can-image rotate">
+        <span class="description">YOU LEARN TO LOVE MY UNEXPECTEDNESS: AN AROMATIC CONFIDENCE AND ACIDIC WIT WRAPPED IN AN ORDINARY EXTERIOR.</span>
+        <!-- <p class="ingredient">
             <h3>LEMON</h3>
             <p>FROM SICILY</p>
             <p>NOT FROM CONCENTRATE</p>
@@ -70,16 +84,42 @@
             <h3>CALIFORNIA</h3>
             <H3>CANNABIS EXTRACT</H3>
             <p>THE PUREST WE CAN FIND</p>
-        </p>
+        </p> -->
+        <div class="container features-table">
+            <div class="row">
+                <div class="col-md-3">
+                    <h3>LEMON</h3>
+                    <p>FROM SICILY</p>
+                    <p>NOT FROM CONCENTRATE</p>
+                    <p>LEMON JUICE</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>LAVENDER</h3>
+                    <p>ALL-NATURAL FLAVOR</p>
+                    <p>DERIVED ONLY FROM THE</p>
+                    <p>LAVENDER PLANT</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>AGAVE</h3>
+                    <p>100% ORGANIC AGAVE</p>
+                    <p>NECTAR FROM MEXICO</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>CALIFORNIA</h3>
+                    <H3>CANNABIS EXTRACT</H3>
+                    <p>THE PUREST WE CAN FIND</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="blood-orange-cardamom">
         <h1>BLOOD</h1>
         <h1>ORANGE</h1>
         <h1>CARDAMOM</h1>
-        <p class="description">I'M A CACOPHONY OF CITRUS, SPICES AND ALL THE THINGS NICE-ISH.</p>
-        <img src="images/ORANGE.png" alt="blood-orange-cardamom-image" width="200px">
-        <p class="ingredient">
+        <span class="description">I'M A CACOPHONY OF CITRUS, SPICES AND ALL THE THINGS NICE-ISH.</span>
+        <img src="images/ORANGE.png" alt="blood-orange-cardamom-image" width="200px" class="orange-can-image rotate">
+        <!-- <p class="ingredient">
             <h3>BLOOD ORANGE</h3>
             <p>FROM SICILY</p>
             <p>NOT FROM CONCENTRATE</p>
@@ -100,7 +140,33 @@
             <h3>CALIFORNIA</h3>
             <H3>CANNABIS EXTRACT</H3>
             <p>THE PUREST WE CAN FIND</p>
-        </p>
+        </p> -->
+        <div class="container features-table">
+            <div class="row">
+                <div class="col-md-3">
+                    <h3>BLOOD ORANGE</h3>
+                    <p>FROM SICILY</p>
+                    <p>NOT FROM CONCENTRATE</p>
+                    <p>BLOOD ORANGE JUICE</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>CARDAMOM</h3>
+                    <p>ALL-NATURAL FLAVOR</p>
+                    <p>DERIVED ONLY FROM THE</p>
+                    <p>CARDAMOM PLANT</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>AGAVE</h3>
+                    <p>100% ORGANIC AGAVE</p>
+                    <p>NECTAR FROM MEXICO</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>CALIFORNIA</h3>
+                    <h3>CANNABIS EXTRACT</h3>
+                    <p>THE PUREST WE CAN FIND</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <p class="natural-text">SIMPLE, ALL-NATURAL INGREDIENTS</p>
@@ -108,9 +174,9 @@
     <section class="grapefruit-rosemary">
         <h1>GRAPEFRUIT</h1>
         <h1>ROSEMARY</h1>
-        <img src="images/GRAPEFRUIT.png" alt="grapefruit-rosemary-image" width="200px">
-        <p class="description">WITH A NATURAL HERBAL SMOOTHNESS, I'M HARD TO MISS. AND YOU WOULDN'T WANT TO MISS ME.</p>
-        <p class="ingredient">
+        <img src="images/GRAPEFRUIT.png" alt="grapefruit-rosemary-image" width="200px" class="grapefruit-can-image rotate">
+        <span class="description">WITH A NATURAL HERBAL SMOOTHNESS, I'M HARD TO MISS. AND YOU WOULDN'T WANT TO MISS ME.</span>
+        <!-- <p class="ingredient">
             <h3>GRAPEFRUIT</h3>
             <p>FROM FLORIDA</p>
             <p>NOT FROM CONCENTRATE</p>
@@ -131,14 +197,41 @@
             <h3>CALIFORNIA</h3>
             <H3>CANNABIS EXTRACT</H3>
             <p>THE PUREST WE CAN FIND</p>
-        </p>
+        </p> -->
+        <div class="container features-table">
+            <div class="row">
+                <div class="col-md-3">
+                    <h3>GRAPEFRUIT</h3>
+                    <p>FROM FLORIDA</p>
+                    <p>NOT FROM CONCENTRATE</p>
+                    <p>GRAPEFRUIT JUICE</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>ROSEMARY</h3>
+                    <p>ALL-NATURAL FLAVOR</p>
+                    <p>DERIVED ONLY FROM THE</p>
+                    <p>ROSEMARY PLANT</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>AGAVE</h3>
+                    <p>100% ORGANIC AGAVE</p>
+                    <p>NECTAR FROM MEXICO</p>
+                </div>
+                <div class="col-md-3">
+                    <h3>CALIFORNIA</h3>
+                    <h3>CANNABIS EXTRACT</h3>
+                    <p>THE PUREST WE CAN FIND</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
-        <p>&#169; 2022 | SipCan</p>
-        <p>Made with &#10084;&#65039; by Priyanshu</p>
+        <p class="footer">&#169; 2022 | SipCan</p>
+        <p class="footer">Made with &#10084;&#65039; by Priyanshu</p>
     </footer>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
