--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
     <nav class="navbar navbar-expand-lg"> <!-- bg-light -->
         <div class="container-fluid">
-            <a class="navbar-brand brand" href="#">SipCan</a>
+            <a class="navbar-brand brand zoom" href="#">SipCan</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item me-3">
+                    <li class="nav-item me-3 zoom">
                         <a class="nav-link nav-font" href="#">PRODUCTS</a>
                     </li>
-                    <li class="nav-item me-3">
+                    <li class="nav-item me-3 zoom">
                         <a class="nav-link nav-font" href="#">OUR STORY</a>
                     </li>
-                    <li class="nav-item me-3">
+                    <li class="nav-item me-3 zoom">
                         <a class="nav-link nav-font" href="#">CONTACT US</a>
                     </li>
-                    <li> <a href="#"><i class="insta-icon fab fa-instagram fa-2x"></i></a> </li>
+                    <li class="zoom"> <a href="#"><i class="insta-icon fab fa-instagram fa-2x"></i></a> </li>
                 </ul>
             </div>
         </div>
@@ -59,10 +59,10 @@
     </div>
 
     <section class="lemon-lavender">
-        <h1>LEMON</h1>
-        <h1> LAVENDER</h1>
-        <img src="images/LEMON.png" alt="lemon-lavender-image" width="200px" height="350px" class="lemon-can-image rotate">
-        <span class="description">YOU LEARN TO LOVE MY UNEXPECTEDNESS: AN AROMATIC CONFIDENCE AND ACIDIC WIT WRAPPED IN AN ORDINARY EXTERIOR.</span>
+        <h1 class="reveal zoom">LEMON<br>LAVENDER</h1>
+        <!-- <h1 class="reveal"> LAVENDER</h1> -->
+        <img src="images/LEMON.png" alt="lemon-lavender-image" width="200px" height="350px" class="lemon-can-image  can-rotate reveal zoom">
+        <span class="description reveal zoom">YOU LEARN TO LOVE MY UNEXPECTEDNESS: AN AROMATIC CONFIDENCE AND ACIDIC WIT WRAPPED IN AN ORDINARY EXTERIOR.</span>
         <!-- <p class="ingredient">
             <h3>LEMON</h3>
             <p>FROM SICILY</p>
@@ -86,25 +86,25 @@
             <p>THE PUREST WE CAN FIND</p>
         </p> -->
         <div class="container features-table">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row reveal">
+                <div class="col-md-3 zoom">
                     <h3>LEMON</h3>
                     <p>FROM SICILY</p>
                     <p>NOT FROM CONCENTRATE</p>
                     <p>LEMON JUICE</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>LAVENDER</h3>
                     <p>ALL-NATURAL FLAVOR</p>
                     <p>DERIVED ONLY FROM THE</p>
                     <p>LAVENDER PLANT</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>AGAVE</h3>
                     <p>100% ORGANIC AGAVE</p>
                     <p>NECTAR FROM MEXICO</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>CALIFORNIA</h3>
                     <H3>CANNABIS EXTRACT</H3>
                     <p>THE PUREST WE CAN FIND</p>
@@ -113,12 +113,14 @@
         </div>
     </section>
 
+    <p class="natural-text zoom reveal">SIMPLE, ALL-NATURAL INGREDIENTS</p>
+
     <section class="blood-orange-cardamom">
-        <h1>BLOOD</h1>
-        <h1>ORANGE</h1>
-        <h1>CARDAMOM</h1>
-        <span class="description">I'M A CACOPHONY OF CITRUS, SPICES AND ALL THE THINGS NICE-ISH.</span>
-        <img src="images/ORANGE.png" alt="blood-orange-cardamom-image" width="200px" class="orange-can-image rotate">
+        <h1 class="reveal zoom">BLOOD<br>ORANGE<br>CARDAMOM</h1>
+        <!-- <h1 class="reveal">ORANGE</h1> -->
+        <!-- <h1 class="reveal">CARDAMOM</h1> -->
+        <span class="description reveal zoom">I'M A CACOPHONY OF CITRUS, SPICES AND ALL THE THINGS NICE-ISH.</span>
+        <img src="images/ORANGE.png" alt="blood-orange-cardamom-image" width="200px" class="orange-can-image can-rotate reveal zoom">
         <!-- <p class="ingredient">
             <h3>BLOOD ORANGE</h3>
             <p>FROM SICILY</p>
@@ -142,25 +144,25 @@
             <p>THE PUREST WE CAN FIND</p>
         </p> -->
         <div class="container features-table">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row reveal">
+                <div class="col-md-3 zoom">
                     <h3>BLOOD ORANGE</h3>
                     <p>FROM SICILY</p>
                     <p>NOT FROM CONCENTRATE</p>
                     <p>BLOOD ORANGE JUICE</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>CARDAMOM</h3>
                     <p>ALL-NATURAL FLAVOR</p>
                     <p>DERIVED ONLY FROM THE</p>
                     <p>CARDAMOM PLANT</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>AGAVE</h3>
                     <p>100% ORGANIC AGAVE</p>
                     <p>NECTAR FROM MEXICO</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>CALIFORNIA</h3>
                     <h3>CANNABIS EXTRACT</h3>
                     <p>THE PUREST WE CAN FIND</p>
@@ -169,13 +171,13 @@
         </div>
     </section>
 
-    <p class="natural-text">SIMPLE, ALL-NATURAL INGREDIENTS</p>
+    <p class="natural-text-2 zoom reveal">SIMPLE, ALL-NATURAL INGREDIENTS</p>
 
     <section class="grapefruit-rosemary">
-        <h1>GRAPEFRUIT</h1>
-        <h1>ROSEMARY</h1>
-        <img src="images/GRAPEFRUIT.png" alt="grapefruit-rosemary-image" width="200px" class="grapefruit-can-image rotate">
-        <span class="description">WITH A NATURAL HERBAL SMOOTHNESS, I'M HARD TO MISS. AND YOU WOULDN'T WANT TO MISS ME.</span>
+        <h1 class="reveal zoom">GRAPEFRUIT<br>ROSEMARY</h1>
+        <!-- <h1 class="reveal">ROSEMARY</h1> -->
+        <img src="images/GRAPEFRUIT.png" alt="grapefruit-rosemary-image" width="200px" class="grapefruit-can-image can-rotate reveal zoom">
+        <span class="description reveal zoom">WITH A NATURAL HERBAL SMOOTHNESS, I'M HARD TO MISS. AND YOU WOULDN'T WANT TO MISS ME.</span>
         <!-- <p class="ingredient">
             <h3>GRAPEFRUIT</h3>
             <p>FROM FLORIDA</p>
@@ -199,25 +201,25 @@
             <p>THE PUREST WE CAN FIND</p>
         </p> -->
         <div class="container features-table">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row reveal">
+                <div class="col-md-3 zoom">
                     <h3>GRAPEFRUIT</h3>
                     <p>FROM FLORIDA</p>
                     <p>NOT FROM CONCENTRATE</p>
                     <p>GRAPEFRUIT JUICE</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>ROSEMARY</h3>
                     <p>ALL-NATURAL FLAVOR</p>
                     <p>DERIVED ONLY FROM THE</p>
                     <p>ROSEMARY PLANT</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>AGAVE</h3>
                     <p>100% ORGANIC AGAVE</p>
                     <p>NECTAR FROM MEXICO</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 zoom">
                     <h3>CALIFORNIA</h3>
                     <h3>CANNABIS EXTRACT</h3>
                     <p>THE PUREST WE CAN FIND</p>
@@ -227,9 +229,10 @@
     </section>
 
     <footer>
-        <p class="footer">&#169; 2022 | SipCan</p>
-        <p class="footer">Made with &#10084;&#65039; by Priyanshu</p>
+        <p class="foot zoom">&#169; 2022 | SipCan</p>
+        <p class="foot zoom">Made with <b class="heart"> &#9829; </b> by Priyanshu</p>
     </footer>
+    <!-- &#10084;&#65039; -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js"></script>
