--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <audio src="sounds/audio.mp3" id="bg-audio" autoplay>
+        <embed src="sounds/audio.mp3" width="180" height="90" hidden="true" />
+    </audio>
 
     <nav class="navbar navbar-expand-lg"> <!-- bg-light -->
         <div class="container-fluid">
