--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SipCan</title>
+    <link rel="icon" href="images/can-icon.png">
 
     <!-- FontAwesome CDN -->
 	<script src="https://kit.fontawesome.com/1c9ad4b785.js" crossorigin="anonymous"></script>
